<resources>
    <string name="app_name">Movie Catalogue (API)</string>
    <string name="tab_movie">Movie</string>
    <string name="tab_tv_show">Tv Show</string>

    <string name="movie_title">Movie Title</string>
    <string name="movie_release">Movie release date</string>
    <string name="vote">Rating</string>
    <string name="tvshow_title">Tv Show Title</string>
    <string name="tvshow_date">Release Date</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="language">Language</string>
    <string name="overview">Overview</string>
    <string name="change_language_settings">Change Language</string>
</resources>
