<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:backgroundTint="@color/colorLight"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    android:id="@+id/cv_tvshow">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/tvshow_poster"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginBottom="8dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tvshow_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tvshow_poster"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tvshow_title"
            android:layout_marginLeft="24dp" />

        <TextView
            android:id="@+id/tvshow_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvshow_title"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/tvshow_date"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tvshow_poster"
            app:layout_constraintTop_toBottomOf="@+id/tvshow_title"
            android:layout_marginLeft="24dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_top_rated"
            app:layout_constraintStart_toEndOf="@+id/tvshow_poster"
            app:layout_constraintTop_toBottomOf="@+id/tvshow_release_date" />

        <TextView
            android:id="@+id/tvshow_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvshow_release_date"
            android:layout_marginTop="8dp"
            android:text="@string/vote"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/tvshow_release_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>